<resources>
    <string name="title_app_name">Music</string>
    <string name="msg_loading">Loading</string>
    <string name="msg_default_progress">0:00</string>
    <string name="title_playlist">Playlist</string>
    <string name="title_playing">Playing</string>
    <string name="title_detail">Detail</string>
    <string name="title_title">Title:</string>
    <string name="title_description">Description:</string>
    <string name="title_id">ID:</string>
    <string name="title_created_at">Created at:</string>
    <string name="title_tag_list">Tag list:</string>
    <string name="title_genre">Genre:</string>
    <string name="title_user">User:</string>
    <string name="title_download">Download</string>
    <string name="title_delete">Xóa</string>
    <string name="title_delete2">XÓA</string>
    <string name="title_play">Play</string>
    <string name="title_add_to_playlist">Thêm vào Playlist</string>
    <string name="title_add_to_favorite">Thêm vào Yêu thích</string>
    <string name="title_create_playlist">Tạo Playlist</string>
    <string name="title_playlists">Playlists</string>
    <string name="title_downloading">Downloading</string>
    <string name="title_downloaded">Downloaded</string>
    <string name="msg_play_list_name">Tên Playlist</string>
    <string name="title_create">Tạo</string>
    <string name="title_cancel">Hủy</string>
    <string name="mgs_empty_name">Tên không được rỗng</string>
    <string name="msg_saved">Tạo Playlist thành công</string>
    <string name="msg_saved_fail">Tạo Playlist thất bại</string>
    <string name="msg_saved_song_playlist_success">Thêm bài hát vào playlist thành công</string>
    <string name="msg_saved_song_">Thêm bài hát vào playlist thành công</string>
    <string name="title_search">Search</string>
    <string name="action_phone_state">android.intent.action.PHONE_STATE</string>
    <string name="extra_state">state</string>
    <string name="action_offhook">OFFHOOK</string>
    <string name="action_idle">IDLE</string>
    <string name="action_ringing">RINGING</string>
    <string name="title_home">NHẠC ONLINE</string>
    <string name="title_personal">CÁ NHÂN</string>
    <string name="title_online">ONLINE</string>
    <string name="title_offline">CÁ NHÂN</string>
    <string name="title_sync">Đồng bộ</string>
    <string name="title_favorite">Yêu thích</string>
    <string name="title_sync2">ĐỒNG BỘ</string>
    <string name="title_song">bài hát</string>
    <string name="title_complete">Xong</string>
    <string name="title_list_song">Danh sách bài hát</string>
    <string name="title_choose_song">Chọn bài hát</string>
    <string name="title_save">Lưu</string>
    <string name="title_save2">LƯU</string>
    <string name="title_no_playlist_available">Không có Playlist nào.</string>
    <string name="title_no_song_available">Không có bài hát nào.</string>
    <string name="msg_failed_save">Lưu không thành công</string>
    <string name="title_delete_playlist">Xóa Playlist</string>
    <string name="title_rename_playlist">Đổi tên Playlist</string>
    <string name="msg_delete_playlist">Bạn có muốn xóa playlist</string>
    <string name="msg_delete_song">Bạn có muốn xóa bài hát</string>
    <string name="msg_delete_success">Xóa thành công</string>
    <string name="msg_delete_failue">Xóa thất bại</string>
    <string name="msg_from_playlist">khỏi Playlist</string>
    <string name="msg_from_favorite">khỏi Yêu thích</string>
    <string name="msg_add_song_to_favorite_success">Đã thêm bài hát %1$s vào Yêu thích</string>
    <string name="msg_add_song_ringtone_success">Đã cài đặt bài hát %1$s làm nhạc chuông</string>
    <string name="title_internet_not_available">Không có kết nối Internet</string>
    <string name="title_retry">THỬ LẠI</string>
    <string name="title_signin">Đăng nhập</string>
    <string name="title_signout">Đăng xuất</string>
    <string name="title_song2">Bài hát</string>
    <string name="msg_sigin_activity">Để thực hiện chức năng đồng bộ, bạn cần phải đăng nhập tài khoản Google</string>
    <string name="msg_checking_sync">Đang kiểm tra...</string>
    <string name="msg_syncing">Đang đồng bộ...</string>
    <string name="title_song_not_on_device">Chưa được tải xuống</string>
    <string name="title_song_not_on_cloud">Chưa được tải lên</string>
    <string name="msg_sync_upload_song">Tải lên: </string>
    <string name="msg_sync_download_song">Tải xuống: </string>
    <string name="msg_delete_track_failed">Xóa bài hát thất bại!</string>
    <string name="msg_not_choose_song">Chưa có bài hát nào được chọn!</string>
    <string name="title_delete_song">Xóa bài hát</string>
    <string name="title_delete_song_uploaded">Xóa bài hát đã tải lên</string>
    <string name="title_from_favorite">khỏi Yêu thích?</string>
    <string name="title_delete_song_from_play_list">Xóa bài hát khỏi Playlist</string>
    <string name="title_delete_song_from_favorite">Xóa bài hát khỏi Yêu thích</string>
    <string name="title_set_ringtone">Cài đặt làm nhạc chuông</string>
    <string name="title_choose_all">Chọn tất cả</string>
    <string name="title_track_history">BÀI HÁT GẦN ĐÂY</string>
    <string name="title_song_uploaded">Các bài hát đã tải lên</string>
    <string name="title_user_info">Thông tin người dùng</string>
    <string name="title_user_name">Tên</string>
    <string name="title_user_email">Email</string>
    <string name="title_info">Thông tin</string>
    <string name="title_fanpage">Fanpage</string>
    <string name="title_policy">Điều khoản</string>
    <string name="title_seach_hint">Tìm kiếm bài hát online</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
