<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:padding="@dimen/controller_padding_bottom">

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_16"
        android:hint="@string/msg_play_list_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewRename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/title_save"
        android:textSize="@dimen/sp_20"
        android:textColor="@color/color_violet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        android:onClick="onClickRename"/>

    <TextView
        android:id="@+id/textViewCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_60"
        android:layout_marginRight="@dimen/dp_60"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/title_cancel"
        android:textColor="@color/color_violet"
        android:textSize="@dimen/sp_20"
        app:layout_constraintEnd_toStartOf="@+id/textViewRename"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        android:onClick="onClickCancel"
        />
</android.support.constraint.ConstraintLayout>