<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.favorite.FavoriteActivity"
    android:background="@color/color_white"
    >

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <TextView
        android:id="@+id/textViewNotTrackAvailable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/title_no_song_available"
        android:textColor="@color/color_black"
        android:textSize="@dimen/sp_20"
        android:visibility="gone"
        />

    <LinearLayout
        android:id="@+id/layoutInternet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:clickable="false"
        android:orientation="vertical"
        android:visibility="gone"

        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textRetry"
            android:layout_centerVertical="true"
            android:text="@string/title_internet_not_available"
            android:textColor="@color/color_black"
            android:textSize="@dimen/sp_20"
            />
        <TextView
            android:id="@+id/textRetry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/title_retry"
            android:textColor="@color/color_green"
            android:onClick="onClickRetry"
            android:textSize="@dimen/sp_25"
            />

    </LinearLayout>

    <include layout="@layout/sub_controller"/>

</RelativeLayout>